--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,7 @@ axum = "0.8.6"
 base64 = "0.22.1"
 sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono"] }
 tokio = { version = "1.46.0", features = ["full"] }
+hmac = "0.12"
+sha2 = "0.10"
+hex = "0.4"
+serde_urlencoded = "0.7"
