--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,10 +5,16 @@ edition = "2024"
 
 [dependencies]
 axum = "0.8.6"
-base64 = "0.22.1"
 sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono"] }
 tokio = { version = "1.46.0", features = ["full"] }
 hmac = "0.12"
 sha2 = "0.10"
 hex = "0.4"
 serde_urlencoded = "0.7"
+reqwest = "0.12.23"
+chrono = "0.4.42"
+dotenvy = "0.15.7"
+base64 = "0.21"
+ed25519-dalek = { version = "2.0.1", features = ["pkcs8"] }
+urlencoding = "2.1"
+pkcs8 = "0.10.2"
