--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,5 @@ base64 = "0.21"
 ed25519-dalek = { version = "2.0.1", features = ["pkcs8"] }
 urlencoding = "2.1"
 pkcs8 = "0.10.2"
+serde = "1.0.228"
+serde_json = "1.0.145"
