--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 axum = "0.8.6"
 sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono"] }
 tokio = { version = "1.46.0", features = ["full"] }
+tokio-tungstenite = "0.28.0"
 hmac = "0.12"
 sha2 = "0.10"
 hex = "0.4"
@@ -20,3 +21,6 @@ urlencoding = "2.1"
 pkcs8 = "0.10.2"
 serde = "1.0.228"
 serde_json = "1.0.145"
+log = "0.4.28"
+anyhow = "1.0.100"
+futures = "0.3.31"
